--- a/style.css
+++ b/style.css
@@ -3,8 +3,35 @@ body {
 }
 
 .container {
-    width: 960px;
     display: flex;
     justify-content: center;
-    align-content: center;
+    margin: auto;
+    width: 80vh;
 }
+
+div .row {
+    justify-content: center;
+    width: 100%;
+    flex: 1;
+}
+
+div .box {
+    margin: 0.5px;
+    border: 0.5px solid darkgray;
+    background-color: lightcyan;
+    aspect-ratio: 1 / 1;
+    scale: 1.0;
+}
+
+div .box.active {
+    background-color: darkblue;
+    scale: 1.1;
+}
+
+/*
+div .box:hover {
+    
+    background-color: cyan;
+    
+}
+*/
